--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h2>Your Score:</h2>
     <h2 id="score">0</h2>
     <h2>Time left:</h2>
-    <h2 id="time-left">60</h2>
+    <h2 id="time-left">10</h2>
+    <button id="start-button">Start Game</button>
 
     <div class="grid">
         <div class="square" id="1"></div>
