add start button function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2 id="score">0</h2>
     <h2>Time left:</h2>
     <h2 id="time-left">10</h2>
-    <button id="start-button">Start Game</button>
+    <button id="start-button" onclick="startGame()">Start Game</button>
 
     <div class="grid">
         <div class="square" id="1"></div>
