--- a/index.html
+++ b/index.html
@@ -8,25 +8,33 @@
     <title>Whack-a-mole</title>
 </head>
 <body>
-    <h2>Your Score:</h2>
-    <h2 id="score">0</h2>
-    <h2>Time left:</h2>
-    <h2 id="time-left">10</h2>
-    <button id="start-button" onclick="startGame()">Start Game</button>
+    <div class="game-container">
 
-    <div class="grid">
-        <div class="square" id="1"></div>
-        <div class="square" id="2"></div>
-        <div class="square" id="3"></div>
-        <div class="square" id="4"></div>
-        <div class="square" id="5"></div>
-        <div class="square" id="6"></div>
-        <div class="square" id="7"></div>
-        <div class="square" id="8"></div>
-        <div class="square" id="9"></div>
+        <div class="score-container">
+            <h2 id="score-title">YOUR SCORE:</h2>
+            <h2 id="score">0</h2>
+            <h2 id="time-title">TIME LEFT:</h2>
+            <h2 id="time-left">10</h2>
+        </div>
+
+        <div class="start-button-container">
+            <button id="start-button" onclick="startGame()">Start Game</button>
+        </div>
+
+        <div class="grid-container">
+            <div class="grid">
+                <div class="square" id="1"></div>
+                <div class="square" id="2"></div>
+                <div class="square" id="3"></div>
+                <div class="square" id="4"></div>
+                <div class="square" id="5"></div>
+                <div class="square" id="6"></div>
+                <div class="square" id="7"></div>
+                <div class="square" id="8"></div>
+                <div class="square" id="9"></div>
+            </div>
+        </div>
     </div>
-
-    
     <script src="./JS/app.js"></script>
 </body>
 </html>
